09-09-2024 v3.1.0
 - Made all JS code not use innerHTML.
02-15-2025 v3.2.0
 - Percentage rounding variants added.
 - Defines update:
 -- Defines for status bar positioning are now XY-based rather than bytes-offset.
 -- Defines regarding an example usage are now separated into a different ASM text file.
 -- Moved the default RAM "!Scratchram_Frames2TimeOutput" for LoROM due to an update on timer
    written on a stripe image.
 - Timer display now have a new display mode setting for "!ShowHours": "2 significant units only"
   which is intended to show only the highest 2 units that are nonzero, saving tiles and
   "screen real estate", suitable for countdown timers:
 -- If timer is less than a minute, it will show only seconds and centiseconds ("SS.CC").
 -- If timer is between a minute and an hour, will only show minutes and seconds ("MM:SS")
 - Fixed an incorrect statement about WriteRepeatedSymbolsWriteVertically that $0C should
   be either $00 or $01, when actuality should be $00 or $02.
 - Updated the info on WriteRepeatedSymbolsWriteVertically this time mentioning that the
   position inputs refer to the top tile extending downwards for downwards and the bottom tile
   extending upwards when extending upwards.
 - Code blocks in the main readme now uses CSS overflows and re-sizable for ease of reading.
 - Added full explanation about stripe tiles crossing tilemap screen border.
 - Corrected various incorrect info on the warmup: "$7E0EF9-$7E0F2E" should be "$7E0EF9-$7E0F2F"
   and in "Create an ASM file to run under" stated that the LDA and STA values should be
 - Added info about subroutine "WriteStringDigitsToHUD" in the main HTML file
 - Fixed a bug on SpriteHUDTest.asm when set to display 2 numbers and the player presses right,
   would increment the high word of the first of the two numbers when it should only increment
   only the second number, due to a typo on the if statement on determining should the increment
   be 16-bit or 32-bit.