@@ -2387,7 +2387,7 @@ Reason this package not including this is because too much information to be had
 <h2 id="OverworldBorder"><a href="#OverworldBorderBack">^</a>Displaying stuff on the overworld border</h2>
 <p>You may be asking, how do I display information on the overworld border? Well, I have good news, because the only thing you have to do is convert the tile numbering for the status bar to
 the tile numbering of the overworld border, if you are dealing with displaying digits (Like I said, add the value of the digits by <kbd>#$22</kbd> and use page 1). For non-digit based things
-like the repeated symbols, just use a different tile number. The graphical bar to be used on the OWB is already covered in that package. So only the numerical display we'll discuss here.</p>
+like the repeated symbols, just use a different tile number. The graphical bar to be used on the OWB is already covered in that package. So only the numerical displays we'll discuss here.</p>
 
 <p>For the 16-bit and larger hex-dec displays, I provided subroutines that convert level-statusbar characters into overworld characters:
 	<table>
