@@ -26,3 +26,8 @@
    would increment the high word of the first of the two numbers when it should only increment
    only the second number, due to a typo on the if statement on determining should the increment
    be 16-bit or 32-bit.
+ - Added to the HTML file what was missing was the subroutines that convert status bar characters
+   to overworld border characters.
+ - Fixed an issue where if you simply set !OverWorldBorderBlankTile to any other value besides
+   $1F, the routines "SixteenBitHexDecDivisionToOWB" and "ThirtyTwoBitHexDecDivisionToOWB"
+   wouldn't update to that because I forgot to make it use such a define.
